# swish-project

./: .gitignore  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  security.yml
docs/: README.md
kubernetes/: swish.yaml
scripts/: bootstrap.sh
src/: main.py
