[tool.poetry]
name = "swish-project"
version = "0.1.0"
description = ""
authors = ["Matthew Greenwald <mdgreenwald@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "swish_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
